--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
 <li>
     <h4>图片视频</h4>
     <ul>
-<<<<<<< HEAD
-        <li>pico: <a href="/pico">/pico</a></li>(我的Github图床)
-=======
-        <li>pico: </li>(我的Github图床)
->>>>>>> origin/main
+        <li>pico: <a href="http://pico.nyacdn.mouup.top/">pico.nyacdn.mouup.top/</a></li>(我的Github图床,后接图片名称)
         <li>OneDrive外链加速：</li>
         <li>pixiv图源：</li>
     </ul>
