--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li>Github.com:</li>
         <li>Github code下载:</li>
         <li>Github release:</li>
+        <li>Gravatar头像:</li>
         （还有什么呢。。。）
     </ul>
 </li>
