--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p>
     &nbsp&nbsp&nbsp&nbsp现在这个cdn仍在建设之中，许多功能尚未实现</br>
     &nbsp&nbsp&nbsp&nbsp如果有任何建议，想添加什么功能，可以发邮件到<a href="mailto:dofryjl@qq.com">这里</a></br>
-    &nbsp&nbsp&nbsp&nbsp这个cdn基于vercel建设</br>
+    &nbsp&nbsp&nbsp&nbsp这个cdn基于vercel和cloudreve建设</br>
     &nbsp&nbsp&nbsp&nbsp开源地址<a href="https://github.com/imouup/nyacdn" target="_self">在这里</a></br>
     &nbsp&nbsp&nbsp&nbsp欢迎来看<a href="https://mouup.top" target="_self">我的博客</a></br>
     <img src="/image/sticker%20(25).png" width="253" height="224" alt="Nachoneko">
