--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li>Github.com:</li>
         <li>Github code下载:</li>
         <li>Github release:</li>
-        <li>Gravatar头像:</li>
+        <li>Gravatar头像: <a href="https://gravatar.cdn.mouup.top/">gravatar.cdn.mouup.top/</a></li>(后接/avatar)
         （还有什么呢。。。）
     </ul>
 </li>
