--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
 <li>
     <h4>实用内容</h4>
     <ul>
-        <li>Github.com:</li>
-        <li>Github code下载:</li>
-        <li>Github release:</li>
+        <li>Github.com（Github release）: <a href="https://github.cdn.mouup.top/">github.cdn.mouup.top/</a> </li>
+        <li>Github raw: <a href="https://rawgh.cdn.mouup.top/">rawgh.cdn.mouup.top/</a> </li>
         <li>Gravatar头像: <a href="https://gravatar.cdn.mouup.top/">gravatar.cdn.mouup.top/</a>(后接/avatar)</li></br>
         （还有什么呢。。。）
     </ul>
