--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h4>图片视频</h4>
     <ul>
         <li>pico: <a href="https://pico.cdn.mouup.top/">pico.nyacdn.mouup.top/</a></li>(我的Github图床,后接图片名称)
-        <li>OneDrive外链加速：</li>
+<!--        <li>OneDrive外链加速：</li> -->
         <li>pixiv图源： <a href="https://pixpic.mouup.top/">pixic.mouup.top/</a></li>
     </ul>
 </li>
