--- a/maintain/index.html
+++ b/maintain/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<img src="maintain.png" alt="正在维护" height=100% width=100%>
+<img src="/maintain.png" alt="正在维护" height=100% width=100%>
 
 </body>
 </html>
