--- a/maintain/index.html
+++ b/maintain/index.html
@@ -2,11 +2,13 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>这里正在施工 | maintaining</title>
 </head>
 <body>
 
-<img src="maintain.png" alt="正在维护" height=100% width=100%>
+<img src="maintain.png" alt="正在维护" height=100% >
 
 </body>
 </html>
