--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <li>
     <h4>图片视频</h4>
     <ul>
-        <li>pico: <a href="https://pico.cdn.mouup.top/">pico.nyacdn.mouup.top/</a></li>(我的Github图床,后接图片名称)
+        <li>pico: <a href="https://pico.cdn.mouup.top/">pico.nyacdn.mouup.top/pico</a></li>(我的Github图床,后接图片名称)
 <!--        <li>OneDrive外链加速：</li> -->
         <li>pixiv图源： <a href="https://pixpic.mouup.top/">pixic.mouup.top/</a></li>
     </ul>
