--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <li>
     <h4>图片视频</h4>
     <ul>
-        <li>pico: <a href="https://pico.cdn.mouup.top/">pico.nyacdn.mouup.top/pico</a></li>(我的Github图床,后接图片名称)
+        <li>pico: <a href="https://cdn.mouup.top/pico">cdn.mouup.top/pico</a></li>(我的Github图床,后接图片名称)
 <!--        <li>OneDrive外链加速：</li> -->
         <li>pixiv图源： <a href="https://pixpic.mouup.top/">pixic.mouup.top/</a></li>
     </ul>
@@ -43,8 +43,7 @@
 <p>
     &nbsp&nbsp&nbsp&nbsp现在这个cdn仍在建设之中，许多功能尚未实现</br>
     &nbsp&nbsp&nbsp&nbsp如果有任何建议，想添加什么功能，可以发邮件到<a href="mailto:dofryjl@qq.com">这里</a></br>
-    &nbsp&nbsp&nbsp&nbsp这个cdn基于vercel和cloudflare建设</br>
-    &nbsp&nbsp&nbsp&nbsp欢迎来看<a href="https://mouup.top" target="_self">我的博客</a></br>
+    &nbsp&nbsp&nbsp&nbsp欢迎来看<a href="https://nyaku.moe" target="_self">我的博客</a></br>
     <img src="/image/sticker%20(25).png" width="253" height="224" alt="Nachoneko">
 </p>
 
