--- a/115/index.html
+++ b/115/index.html
@@ -1,4 +1,4 @@
 <head>
     <!-- 以下方式定时转到其他页面 -->
-    <meta http-equiv="refresh" content="0;url=https://iamswlx-my.sharepoint.com/:f:/g/personal/iamswlx_iamswlx_onmicrosoft_com/Elx5ssl-Gh5Dl5g_ec577HAB4kOI5erW4ErSXvnbZ5CpnQ?e=gUkpJk">
+    <meta http-equiv="refresh" content="0;url=https://115.nyaku.moe">
 </head>
